# s3downloader

./: .gitignore  LICENSE  README.md  pyproject.toml  settings.dist.ini
src/s3downloader/: __main__.py
src/s3downloader/classes/: client.py  config.py
